<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_activitat_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sabrinapertusatti.exemplecanvipantalla.ActivitatPrincipal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/label2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/txtEntraCog" />

    <Button
        android:text="@string/btnCanvi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCanvi"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="74dp" />

    <TextView
        android:text="@string/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label2"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/txtEntraNom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEntraCog"
        android:layout_alignLeft="@+id/label2"
        android:layout_alignStart="@+id/label2"
        android:layout_marginTop="24dp"
        android:id="@+id/label3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtEntraNom"
        android:layout_below="@+id/label1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtEntraEdat"
        android:layout_below="@+id/label3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_alignBaseline="@+id/label4"
        android:layout_alignBottom="@+id/label4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView

        android:text="@string/checkboxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label4"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/txtEntraEdat"
        android:layout_toRightOf="@+id/label3"
        android:layout_toEndOf="@+id/label3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:id="@+id/label1"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/label2"
        android:layout_alignStart="@+id/label2" />

</RelativeLayout>
